Fix hidden overflow for search bar box shadow

--- a/site/src/pages/SearchPage/SearchPage.scss
+++ b/site/src/pages/SearchPage/SearchPage.scss
@@ -15,7 +15,6 @@
         display: flex;
         flex-direction: column;
         height: 85vh;
-        overflow-y: hidden;
     }
 
     #search-popup {
